k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motivational-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: motivational-app
  template:
    metadata:
      labels:
        app: motivational-app
    spec:
      containers:
      - name: motivational-app
        # Replace with your actual ECR image URI
        image: 548135082630.dkr.ecr.us-east-1.amazonaws.com/alaa-devops-project-app-repo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000 # Application runs on port 5000 (Flask)
---
apiVersion: v1
kind: Service
metadata:
  name: motivational-service
  namespace: default
spec:
  # Using LoadBalancer to provision an AWS ELB for external access
  type: LoadBalancer
  selector:
    app: motivational-app
  ports:
    - protocol: TCP
      port: 80         # External port (HTTP)
      targetPort: 5000 # Internal container port
